<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:text="@string/main_activity"
        android:textSize="36sp" />

    <Button
        android:id="@+id/btn_noParam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_param" />

    <Button
        android:id="@+id/btn_param"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/param" />

    <Button
        android:id="@+id/btn_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listview" />

    <Button
        android:id="@+id/btn_shared"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sharedpreferences" />

    <Button
        android:id="@+id/btn_sqlite3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sqlite3" />

    <ImageView
        android:id="@+id/iv_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>